# ranked-choice-matcher

./: .gitignore  .pre-commit-config.yaml  README.md  dataproducer.py  metrics.py  noxfile.py  pyproject.toml  requirements.txt  run.py
ADTs/: __init__.py  event.py  person.py
ranked-choice-assigner/: dataproducer.py  metrics.py  run.py
ranked-choice-assigner/ADTs/: __init__.py  event.py  person.py
ranked-choice-assigner/adt/: __init__.py
scripts/: setup.sh  update_data.sh
src/: dataproducer.py  metrics.py  run.py
src/ADTs/: __init__.py  event.py
src/adt/: __init__.py  event.py  person.py
src/datapipelines/: pyproject.toml
src/ranked_choice_matcher/: __init__.py  __main__.py  dataserver.py  datawriter.py  metrics.py  models.py  run.py  strategies.py  utility.py
src/ranked_choice_matcher/adt/: __init__.py  event.py  person.py
tests/: test_person.py
