[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "build"

[project]
name = "ranked_choice_assigner"
version = "0.0.12"
authors = [{ name = "Rafay Khan" }]
maintainers = [{ name = "Rafay Khan" }]
description = "An algorithm/automation program for assigning people to (simultaneous) events based on ranked preferences."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml", "pandas"]

[project.optional-dependencies]
development = ["ruff", "mypy", "pre-commit"]

[tool.ruff]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
include = ["*.py", "*.ipynb", "**/pyproject.toml"]
ignore = ["ANN101", "COM819"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
