[project]
name = "ranked_choice_matcher"
version = "0.1.0"
description = "An algorithm/automation program for matching people to events based on their ranked preferences."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "EXE",  # flake8-executable
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PL",   # pylint
    "TRY",  # tryceratops
    "PERF", # Perflint
    "RUF",  # Ruff-specific rules
]
ignore = ["ANN101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
